<resources>
    <string name="app_name">TriLED Controller</string>
    <string name="lamp_address">Lamp address:</string>
    <string name="lamp_address_example">192.168.0.0</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_invalid_address">🔴 Invalid address</string>
    <string name="status_not_connected">🟠 Cannot connect to lamp</string>
    <string name="status_connected">🟢 Lamp connected</string>
    <string name="hue_1">Hue 1:</string>
    <string name="hue_2">Hue 2:</string>
    <string name="brightness">Brightness:</string>
</resources>