<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/lamp_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lamp_address_example"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:id="@+id/addressInput"/>
    </LinearLayout>
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:text="@string/status_connected"
        android:id="@+id/connectionStatus"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hue_1"/>
        <SeekBar
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="36"
            android:progress="12"
            android:id="@+id/hue1Picker"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="120"
            android:id="@+id/hue1Value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hue_2"/>
        <SeekBar
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="36"
            android:progress="24"
            android:id="@+id/hue2Picker"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="240"
            android:id="@+id/hue2Value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"/>
        <SeekBar
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="10"
            android:id="@+id/brightnessPicker"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:id="@+id/brightnessValue"/>
    </LinearLayout>


</LinearLayout>